--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   http: ^1.1.0
   intl: ^0.18.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
