--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   intl: ^0.18.1
   provider: ^6.0.5
   collection: ^1.12.2
-
+  path_provider: ^2.1.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
