--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.5
   collection: ^1.12.2
   path_provider: ^2.1.1
+  shared_preferences: ^2.2.2
   
 dev_dependencies:
   flutter_test:
